<resources>
    <string name="app_name">School Planner</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="task">Task</string>
    <string name="new_task">New Task</string>
    <string name="new_timetable">New Timetable</string>
    <string name="timetable">Timetable</string>
    <string name="done">Done</string>
    <string name="delete_course">Delete course</string>
    <string name="create_task">Create task</string>
    <string name="course">Course</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="select_day">Select day</string>
    <string name="empty_name_warning">Add a name for the subject.</string>
    <string name="ok">OK</string>
    <string name="tasks">Tasks</string>
    <string name="write_task">Type your task…</string>
    <string name="time_warning_message">The start time must be less than the end time</string>
    <string name="confirm_delete_course">Delete subject?</string>
    <string name="confirm_delete_course_message">This action will delete this subject and related classes permanently</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_name">Task name</string>
    <string name="task_description">Description</string>
    <string name="discard">Discard</string>
    <string name="discard_title">Discard changes?</string>
    <string name="discard_message">This action will discard changes you\'ve made</string>
    <string name="delete_course_item">Delete course</string>
    <string name="task_list">Task list</string>
    <string name="new_professor">New professor</string>
    <string name="professor">Professor</string>
    <string name="edit_professor_item">Edit professor</string>
    <string name="delete_professor_item">Delete professor</string>
    <string name="professors">Professors</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="overdue">Overdue</string>
    <string name="no_date">No date</string>
    <string name="course_name">Course name</string>
    <string name="new_course">New course…</string>
    <string name="classroom">Classroom</string>
    <string name="day_of_week">Day Of Week</string>
    <string name="duration">Duration</string>
    <string name="confirm_delete_professor">Delete professor?</string>
    <string name="confirm_delete_professor_message">This action will delete this teacher permanently</string>
    <string name="select_date">Select date</string>
    <string name="confirm_delete_task">Delete task?</string>
    <string name="confirm_delete_task_message">This action will delete this task permanently</string>
    <string name="edit_class">Edit class</string>
    <string name="subjects">Subjects</string>
    <string name="teachers">Teachers</string>
    <string name="edit_subject">Edit subject</string>
    <string name="delete_subject">Delete subject</string>
    <string name="subject_details">Subject</string>
    <string name="subject">Subject</string>
    <string name="teacher">Teacher</string>
    <string name="delete_subject_title">Delete subject?</string>
    <string name="edit_teacher">Edit teacher</string>
    <string name="confirm_delete_class">Delete class?</string>
    <string name="confirm_delete_class_message">This action will delete this class permanently</string>
    <string name="delete_class">Delete class</string>
    <string name="select_subject">Select subject</string>
    <string name="class_details">Class details</string>
    <string name="select_a_subject">Select a subject</string>
    <string name="delete">Delete</string>
    <string name="fill_in_fields">Fill in the required fields</string>
    <string name="timetables_item">Change timetable</string>
    <string name="timetables_screen_title">Change timetable</string>
    <string name="confirm_delete_timetable_title">Delete timetable?</string>
    <string name="confirm_delete_timetable_message">This action will delete this timetable and related classes permanently</string>
    <string name="at_least_one_timetable">There must be at least one timetable</string>
    <string name="view_all_teachers">View all teachers</string>
    <string name="select_teacher">Select a teacher</string>
    <string name="no_teachers_added">No teachers added</string>
    <string name="add_teacher">Add teacher</string>
    <string name="no_teacher">No teacher</string>
    <string name="all_classes">All classes</string>
    <string name="no_classroom">No classroom</string>
    <string name="no_classes">No classes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="empty_subject">Add a subject</string>
    <string name="empty_teacher">Add a teacher</string>
    <string name="empty_classroom">Add a classroom</string>
    <string name="class_success">The class was added</string>
    <string name="select_timetable">Select a timetable</string>
    <string name="navigation_home_item">Home</string>
    <string name="navigation_classes_item">Classes</string>
    <string name="navigation_tasks_item">Tasks</string>
    <string name="navigation_notes_item">Notes</string>
    <string name="create_class">Create class</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="note_added">Note has been added</string>
    <string name="period_added_success">Period has been added</string>
    <string name="grade_added_success">Grade has been added</string>
    <string name="new_period">New Period</string>
    <string name="period_text_field_hint">Period</string>
    <string name="new_description">Period description</string>
    <string name="description_text_field_hint">Description</string>
</resources>